tests/ui/spirv-attr/bool-inputs-err.stderr
error: entry-point parameter cannot contain `bool`s
  --> $DIR/bool-inputs-err.rs:13:12
   |
13 |     input: bool,
   |            ^^^^

error: entry-point parameter cannot contain `bool`s
  --> $DIR/bool-inputs-err.rs:14:13
   |
14 |     output: &mut bool,
   |             ^^^^^^^^^

error: entry-point parameter cannot contain `bool`s
  --> $DIR/bool-inputs-err.rs:15:35
   |
15 |     #[spirv(push_constant)] push: &bool,
   |                                   ^^^^^

error: entry-point parameter cannot contain `bool`s
  --> $DIR/bool-inputs-err.rs:16:32
   |
16 |     #[spirv(uniform)] uniform: &Boolthing,
   |                                ^^^^^^^^^^

error: aborting due to 4 previous errors

